# ClovaLink

./: .dockerignore  .env  .env.example  .env.prod.example  .envrc  .gitignore  CONTRIBUTING.md  Containerfile  DOCKER_SETUP.md  Dockerfile  ERR_EMPTY_RESPONSE_FIX.md  LICENSE  MIGRATION_TO_PODMAN.md  PODMAN_SETUP.md  README.md  copy-pdf-worker.js  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  generate-encryption-key.js  next.config.js  nginx.conf  package-lock.json  package.json  podman-compose.prod.yml  podman-compose.yml  podman-start.sh  podman-stop.sh  server.js  test-rust.js  tsconfig.json
ClovaLink/: .env.prod.example  Dockerfile  README.md  package.json  setup.js
ClovaLink/ClovaLink/: .dockerignore  .env.example  docker-compose.yml  docker-entrypoint.sh  next.config.js  package-lock.json
prisma/: schema.prisma  seed.ts
rust-core/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  setup.sh  test.js
rust-core/src/: lib.rs
scripts/: migrate-encrypt-files.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/privacy/: page.tsx
src/components/: ActiveUsers.tsx  DocumentPreview.tsx  DocumentUpload.tsx  HelpAccordion.tsx  NotificationCenter.tsx
src/lib/: apiMiddleware.ts  apiResponse.ts  auth.ts  cryptoAdapter.ts  documentEncryption.ts  encryption.ts  env.ts  fetchWithCancel.ts  fileValidation.ts  logger.ts  permissions.ts  polyfills.ts  prisma.ts  rateLimit.ts  redis.ts  safeFetch.ts  settings.ts  socket.ts  totp.ts  twoFactor.ts  validation.ts  webauthn.ts
src/types/: global.d.ts
(+175 files in other folders)
