[package]
name = "clovalink-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
blake3 = "1.5"

# N-API bindings for Node.js
napi = { version = "2.16", features = ["serde-json"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

